clean up micronaut framework integration
Signed-off-by: Gabriel Harris-Rouquette <gabizou@me.com>